Correções no tratamento

--- a/notebooks/visualization/dados.ipynb
+++ b/notebooks/visualization/dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  Temporada  Clube_ID     Tipo     Player Origem_Destino   Transfer Sum\n",
+      "0     14/15         5    Saída      Abuda   Aparecidense  free transfer\n",
+      "1     14/15        10    Saída     Acácio   Portimonense  loan transfer\n",
+      "2     14/15         6  Entrada   Adailton        FC Sion  free transfer\n",
+      "3     14/15         6    Saída   Adailton        Chicago  free transfer\n",
+      "4     14/15         1  Entrada  Adalberto     América-RN  free transfer\n",
+      "      Temporada  Clube_ID     Tipo          Player Origem_Destino Transfer Sum\n",
+      "27899     25/26        14  Entrada       Zé Ivaldo         Santos  End of loan\n",
+      "27900     25/26        31    Saída       Zé Ivaldo       Cruzeiro  End of loan\n",
+      "27901     25/26        24    Saída         Zé Neto     Caravaggio  End of loan\n",
+      "27902     25/26        31    Saída  Álvaro Barreal     Cincinnati  End of loan\n",
+      "27903     25/26        23    Saída            Ênio       Amazonas  End of loan\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 27904 entries, 0 to 27903\n",
       "Data columns (total 6 columns):\n",
@@ -57,21 +69,39 @@
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_TRANSFERENCIAS_RAW, sep=\";\")\n",
+    "dftr = pd.read_csv(ARQUIVO_TRANSFERENCIAS_RAW, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dftr.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dftr.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dftr.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   ID  Clube_ID     Tipo Origem_Destino  Valor Empréstimo   Ano\n",
+      "0   1         5    Saída   Aparecidense    0.0        Não  2015\n",
+      "1   2        10    Saída   Portimonense    0.0        Sim  2015\n",
+      "2   3         6  Entrada        FC Sion    0.0        Não  2015\n",
+      "3   4         6    Saída        Chicago    0.0        Não  2015\n",
+      "4   5         1  Entrada     América-RN    0.0        Não  2015\n",
+      "          ID  Clube_ID     Tipo Origem_Destino  Valor Empréstimo   Ano\n",
+      "27899  27900        14  Entrada         Santos    0.0        Sim  2026\n",
+      "27900  27901        31    Saída       Cruzeiro    0.0        Sim  2026\n",
+      "27901  27902        24    Saída     Caravaggio    0.0        Sim  2026\n",
+      "27902  27903        31    Saída     Cincinnati    0.0        Sim  2026\n",
+      "27903  27904        23    Saída       Amazonas    0.0        Sim  2026\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 27904 entries, 0 to 27903\n",
       "Data columns (total 7 columns):\n",
@@ -91,21 +121,39 @@
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_TRANSFERENCIAS_PROCESSED, sep=\";\")\n",
+    "dftp = pd.read_csv(ARQUIVO_TRANSFERENCIAS_PROCESSED, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dftp.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dftp.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dftp.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   Pos       Equipevde Pts   J   V   E   D  GP  GC   SG   Ano\n",
+      "0    1  Corinthians(C)  81  38  24   9   5  71  31  +40  2015\n",
+      "1   20       Joinville  31  38   7  10  21  26  48  −22  2015\n",
+      "2   19           Goiás  38  38  10   8  20  39  49  −10  2015\n",
+      "3   18   Vasco da Gama  41  38  10  11  17  28  54  −26  2015\n",
+      "4   17            Avaí  42  38  11   9  18  38  60  −22  2015\n",
+      "     Pos            Equipevde Pts   J   V   E   D  GP  GC   SG   Ano\n",
+      "195    2            Palmeiras  73  38  22   7   9  60  33  +27  2024\n",
+      "196    1          Botafogo(C)  79  38  23  10   5  59  29  +30  2024\n",
+      "197   19  Atlético Goianiense  30  38   7   9  22  29  58  −29  2024\n",
+      "198    9             Cruzeiro  52  38  14  10  14  43  41   +2  2024\n",
+      "199   20               Cuiabá  30  38   6  12  20  29  49  −20  2024\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 200 entries, 0 to 199\n",
       "Data columns (total 11 columns):\n",
@@ -125,25 +173,79 @@
       "dtypes: int64(8), object(3)\n",
       "memory usage: 17.3+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Corinthians(C)', 'Joinville', 'Goiás', 'Vasco da Gama', 'Avaí',\n",
+       "       'Figueirense', 'Chapecoense', 'Fluminense', 'Flamengo',\n",
+       "       'Ponte Preta', 'Coritiba', 'Palmeiras', 'Cruzeiro', 'Santos',\n",
+       "       'Sport', 'Internacional', 'São Paulo', 'Grêmio',\n",
+       "       'Atlético Mineiro', 'Atlético Paranaense', 'Vitória',\n",
+       "       'América Mineiro', 'Santa Cruz', 'Botafogo', 'Corinthians',\n",
+       "       'Palmeiras(C)', 'Atlético Goianiense', 'Bahia', 'Ceará', 'Paraná',\n",
+       "       'CSA', 'Fortaleza', 'Flamengo(C)', 'Athletico Paranaense',\n",
+       "       'Red Bull Bragantino', 'Juventude', 'Cuiabá', 'Criciúma',\n",
+       "       'Botafogo(C)'], dtype=object)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_BRASILEIRAO_RAW, sep=\";\")\n",
+    "dfbr = pd.read_csv(ARQUIVO_BRASILEIRAO_RAW, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dfbr.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dfbr.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dfbr.info()\n",
+    "\n",
+    "# Exibir Clubes Únicos\n",
+    "dfbr['Equipevde'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   ID  Posição          Clube  Pontos  Jogos  Vitórias  Empates  Derrotas  GP  \\\n",
+      "0   1        1    Corinthians      81     38        24        9         5  71   \n",
+      "1   2       20      Joinville      31     38         7       10        21  26   \n",
+      "2   3       19          Goiás      38     38        10        8        20  39   \n",
+      "3   4       18  Vasco da Gama      41     38        10       11        17  28   \n",
+      "4   5       17           Avaí      42     38        11        9        18  38   \n",
+      "\n",
+      "   GC  SG   Ano  \n",
+      "0  31  40  2015  \n",
+      "1  48 -22  2015  \n",
+      "2  49 -10  2015  \n",
+      "3  54 -26  2015  \n",
+      "4  60 -22  2015  \n",
+      "      ID  Posição                Clube  Pontos  Jogos  Vitórias  Empates  \\\n",
+      "195  196        2            Palmeiras      73     38        22        7   \n",
+      "196  197        1             Botafogo      79     38        23       10   \n",
+      "197  198       19  Atlético Goianiense      30     38         7        9   \n",
+      "198  199        9             Cruzeiro      52     38        14       10   \n",
+      "199  200       20               Cuiabá      30     38         6       12   \n",
+      "\n",
+      "     Derrotas  GP  GC  SG   Ano  \n",
+      "195         9  60  33  27  2024  \n",
+      "196         5  59  29  30  2024  \n",
+      "197        22  29  58 -29  2024  \n",
+      "198        14  43  41   2  2024  \n",
+      "199        20  29  49 -20  2024  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 200 entries, 0 to 199\n",
       "Data columns (total 12 columns):\n",
@@ -164,25 +266,78 @@
       "dtypes: int64(11), object(1)\n",
       "memory usage: 18.9+ KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['Corinthians', 'Joinville', 'Goiás', 'Vasco da Gama', 'Avaí',\n",
+       "       'Figueirense', 'Chapecoense', 'Fluminense', 'Flamengo',\n",
+       "       'Ponte Preta', 'Coritiba', 'Palmeiras', 'Cruzeiro', 'Santos',\n",
+       "       'Sport', 'Internacional', 'São Paulo', 'Grêmio',\n",
+       "       'Atlético Mineiro', 'Atlético Paranaense', 'Vitória',\n",
+       "       'América Mineiro', 'Santa Cruz', 'Botafogo', 'Atlético Goianiense',\n",
+       "       'Bahia', 'Ceará', 'Paraná', 'CSA', 'Fortaleza',\n",
+       "       'Athletico Paranaense', 'Red Bull Bragantino', 'Juventude',\n",
+       "       'Cuiabá', 'Criciúma'], dtype=object)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_BRASILEIRAO_PROCESSED, sep=\";\")\n",
+    "dfbp = pd.read_csv(ARQUIVO_BRASILEIRAO_PROCESSED, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dfbp.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dfbp.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dfbp.info()\n",
+    "\n",
+    "# Exibir Clubes Únicos\n",
+    "dfbp['Clube'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   ID          Nome_Oficial         Nome_Transfermarkt  Código_Transfermarkt  \\\n",
+      "0   1       América Mineiro  america-futebol-clube-mg-                  2863   \n",
+      "1   2   Atlético Goianiense  atletico-clube-goianiense                 15172   \n",
+      "2   3      Atlético Mineiro     clube-atletico-mineiro                   330   \n",
+      "3   4  Athletico Paranaense  club-athletico-paranaense                   679   \n",
+      "4   5                  Avaí                    avai-fc                  2035   \n",
+      "\n",
+      "   Nome_Sofascore  Código_Sofascore  \n",
+      "0             NaN               NaN  \n",
+      "1             NaN               NaN  \n",
+      "2             NaN               NaN  \n",
+      "3             NaN               NaN  \n",
+      "4             NaN               NaN  \n",
+      "    ID   Nome_Oficial              Nome_Transfermarkt  Código_Transfermarkt  \\\n",
+      "30  31         Santos                       fc-santos                   221   \n",
+      "31  32      São Paulo         sao-paulo-futebol-clube                   585   \n",
+      "32  33   Sport Recife            sport-club-do-recife                  8718   \n",
+      "33  34  Vasco da Gama  clube-de-regatas-vasco-da-gama                   978   \n",
+      "34  35        Vitória           esporte-clube-vitoria                  2125   \n",
+      "\n",
+      "    Nome_Sofascore  Código_Sofascore  \n",
+      "30             NaN               NaN  \n",
+      "31             NaN               NaN  \n",
+      "32             NaN               NaN  \n",
+      "33             NaN               NaN  \n",
+      "34             NaN               NaN  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 35 entries, 0 to 34\n",
       "Data columns (total 6 columns):\n",
@@ -201,21 +356,85 @@
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_CLUBES_RAW, sep=\";\")\n",
+    "dfcr = pd.read_csv(ARQUIVO_CLUBES_RAW, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dfcr.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dfcr.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dfcr.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   ID          Nome Oficial  Participacoes_SerieA  Rebaixamentos  \\\n",
+      "0   1       América Mineiro                     5              3   \n",
+      "1   2   Atlético Goianiense                     5              3   \n",
+      "2   3      Atlético Mineiro                    10              0   \n",
+      "3   4  Athletico Paranaense                     6              1   \n",
+      "4   5                  Avaí                     4              4   \n",
+      "\n",
+      "   Media_Pontos  Aproveitamento(%)  Ultimo_Ano_SerieA  Media_Pontos_Ult3anos  \\\n",
+      "0         39.60              34.74             2023.0                  43.33   \n",
+      "1         41.00              35.96             2024.0                  39.67   \n",
+      "2         55.30              48.51             2024.0                  57.00   \n",
+      "3         53.33              46.78             2024.0                  52.00   \n",
+      "4         35.00              30.70             2022.0                  32.67   \n",
+      "\n",
+      "   Posicao_Media_Ult3anos  Compras_Total_R$  ...  Pos_11  Pos_12  Pos_13  \\\n",
+      "0                   12.67               0.0  ...       0       0       0   \n",
+      "1                   15.33               0.0  ...       0       0       1   \n",
+      "2                    7.33               0.0  ...       0       1       1   \n",
+      "3                   10.33               0.0  ...       0       0       0   \n",
+      "4                   19.00               0.0  ...       0       0       0   \n",
+      "\n",
+      "   Pos_14  Pos_15  Pos_16  Pos_17  Pos_18  Pos_19  Pos_20  \n",
+      "0       0       0       0       1       0       0       2  \n",
+      "1       0       0       0       0       1       1       1  \n",
+      "2       0       0       0       0       0       0       0  \n",
+      "3       1       0       0       1       0       0       0  \n",
+      "4       0       0       0       1       1       1       1  \n",
+      "\n",
+      "[5 rows x 33 columns]\n",
+      "    ID   Nome Oficial  Participacoes_SerieA  Rebaixamentos  Media_Pontos  \\\n",
+      "30  31         Santos                     9              1         56.67   \n",
+      "31  32      São Paulo                    10              0         57.00   \n",
+      "32  33   Sport Recife                     0              0          0.00   \n",
+      "33  34  Vasco da Gama                     7              2         46.43   \n",
+      "34  35        Vitória                     4              1         43.00   \n",
+      "\n",
+      "    Aproveitamento(%)  Ultimo_Ano_SerieA  Media_Pontos_Ult3anos  \\\n",
+      "30              49.71             2023.0                  46.67   \n",
+      "31              50.00             2024.0                  55.33   \n",
+      "32               0.00                NaN                   0.00   \n",
+      "33              40.73             2024.0                  45.33   \n",
+      "34              37.72             2024.0                  42.33   \n",
+      "\n",
+      "    Posicao_Media_Ult3anos  Compras_Total_R$  ...  Pos_11  Pos_12  Pos_13  \\\n",
+      "30                   13.00               0.0  ...       0       1       0   \n",
+      "31                    8.67               0.0  ...       1       0       2   \n",
+      "32                     NaN               0.0  ...       0       0       0   \n",
+      "33                   14.00               0.0  ...       0       1       0   \n",
+      "34                   15.33               0.0  ...       1       0       0   \n",
+      "\n",
+      "    Pos_14  Pos_15  Pos_16  Pos_17  Pos_18  Pos_19  Pos_20  \n",
+      "30       0       0       0       1       0       0       0  \n",
+      "31       0       0       0       0       0       0       0  \n",
+      "32       0       0       0       0       0       0       0  \n",
+      "33       0       1       1       1       1       0       0  \n",
+      "34       0       0       2       0       0       1       0  \n",
+      "\n",
+      "[5 rows x 33 columns]\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 35 entries, 0 to 34\n",
       "Data columns (total 33 columns):\n",
@@ -261,10 +480,16 @@
    ],
    "source": [
     "# Carregar o CSV\n",
-    "df = pd.read_csv(ARQUIVO_CLUBES_PROCESSED, sep=\";\")\n",
+    "dfcp = pd.read_csv(ARQUIVO_CLUBES_PROCESSED, sep=\";\")\n",
     "\n",
     "# Exibir as primeiras linhas do DataFrame\n",
-    "df.info()"
+    "print(dfcp.head())\n",
+    "\n",
+    "# Exibir as últimas linhas do DataFrame\n",
+    "print(dfcp.tail())\n",
+    "\n",
+    "# Exibir as informações do DataFrama\n",
+    "dfcp.info()"
    ]
   }
  ],
