Correção nomes clubes Brasileirão

--- a/notebooks/visualization/dados.ipynb
+++ b/notebooks/visualization/dados.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -274,14 +274,14 @@
        "       'Figueirense', 'Chapecoense', 'Fluminense', 'Flamengo',\n",
        "       'Ponte Preta', 'Coritiba', 'Palmeiras', 'Cruzeiro', 'Santos',\n",
        "       'Sport', 'Internacional', 'São Paulo', 'Grêmio',\n",
-       "       'Atlético Mineiro', 'Atlético Paranaense', 'Vitória',\n",
+       "       'Atlético Mineiro', 'Athletico Paranaense', 'Vitória',\n",
        "       'América Mineiro', 'Santa Cruz', 'Botafogo', 'Atlético Goianiense',\n",
        "       'Bahia', 'Ceará', 'Paraná', 'CSA', 'Fortaleza',\n",
-       "       'Athletico Paranaense', 'Red Bull Bragantino', 'Juventude',\n",
-       "       'Cuiabá', 'Criciúma'], dtype=object)"
+       "       'Red Bull Bragantino', 'Juventude', 'Cuiabá', 'Criciúma'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -381,21 +381,21 @@
       "0   1       América Mineiro                     5              3   \n",
       "1   2   Atlético Goianiense                     5              3   \n",
       "2   3      Atlético Mineiro                    10              0   \n",
-      "3   4  Athletico Paranaense                     6              1   \n",
+      "3   4  Athletico Paranaense                    10              1   \n",
       "4   5                  Avaí                     4              4   \n",
       "\n",
       "   Media_Pontos  Aproveitamento(%)  Ultimo_Ano_SerieA  Media_Pontos_Ult3anos  \\\n",
-      "0         39.60              34.74             2023.0                  43.33   \n",
-      "1         41.00              35.96             2024.0                  39.67   \n",
-      "2         55.30              48.51             2024.0                  57.00   \n",
-      "3         53.33              46.78             2024.0                  52.00   \n",
-      "4         35.00              30.70             2022.0                  32.67   \n",
+      "0          39.6              34.74             2023.0                  43.33   \n",
+      "1          41.0              35.96             2024.0                  39.67   \n",
+      "2          55.3              48.51             2024.0                  57.00   \n",
+      "3          53.6              47.02             2024.0                  52.00   \n",
+      "4          35.0              30.70             2022.0                  32.67   \n",
       "\n",
       "   Posicao_Media_Ult3anos  Compras_Total_R$  ...  Pos_11  Pos_12  Pos_13  \\\n",
       "0                   12.67               0.0  ...       0       0       0   \n",
       "1                   15.33               0.0  ...       0       0       1   \n",
       "2                    7.33               0.0  ...       0       1       1   \n",
-      "3                   10.33               0.0  ...       0       0       0   \n",
+      "3                   10.33               0.0  ...       1       0       0   \n",
       "4                   19.00               0.0  ...       0       0       0   \n",
       "\n",
       "   Pos_14  Pos_15  Pos_16  Pos_17  Pos_18  Pos_19  Pos_20  \n",
